--- a/main.html
+++ b/main.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Accessible Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <h1 role="heading">My Accessible Portfolio</h1>
+
+    <nav role="navigation">
+        <ul role="list">
+            <li role="listitem">Home</li>
+            <li role="listitem">About</li>
+            <li role="listitem">Projects</li>
+        </ul>
+    </nav>
+
+    <img 
+        src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg"
+        alt="Profile photo"
+        role="img"
+        width="200"
+    >
+
+    <p>This is a brief description of my accessible portfolio website.</p>
+
+    <ul role="list">
+        <li role="listitem">Web Development</li>
+        <li role="listitem">UI Design</li>
+        <li role="listitem">Accessibility Testing</li>
+    </ul>
 
 </body>
-
 </html>
